--- a/app/src/main/res/layout/fragment_add.xml
+++ b/app/src/main/res/layout/fragment_add.xml
@@ -75,11 +75,10 @@
         >
 
         <AutoCompleteTextView
-            android:hint="@string/gender"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:inputType="none"
-            />
+            android:hint="@string/gender"
+            android:inputType="none" />
 
     </com.google.android.material.textfield.TextInputLayout>
 
